--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.1.3",
+    "tsparticles": "^2.1.3",
     "typed.js": "^2.0.12",
     "web-vitals": "^2.1.4"
   },
